--- a/app/globals.css
+++ b/app/globals.css
@@ -13,8 +13,6 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
   --color-primary: #FF0000;
   --color-secondary: #ffffff;
   --color-tertiary: #000000;
@@ -26,6 +24,11 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.swiper-pagination-bullets {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 .swiper-pagination-bullet {
   background: var(--color-secondary) !important;
